fixed nav alignment, need to make search bar appear when clicking icon

--- a/app/scss/_confirm.scss
+++ b/app/scss/_confirm.scss
@@ -31,7 +31,7 @@ video {
   }
 }
 
-@media (max-width: 300px) {
+@media (max-width: 400px) {
   #age-validation {
     font-size: 1.5rem;
     top: 19%;
