--- a/app/scss/_custom.scss
+++ b/app/scss/_custom.scss
@@ -190,7 +190,7 @@
   }
 }
 
-@media (max-width:300px) {
+@media (max-width:400px) {
   #custom-cocktail-form {
     width: 100%;
     border: none;
