--- a/app/scss/_dashboard.scss
+++ b/app/scss/_dashboard.scss
@@ -71,7 +71,7 @@
   }
 }
 
-@media (max-width: 300px) {
+@media (max-width: 400px) {
   #select-view {
     width: 90%;
     margin: 100px auto 0 auto;
