--- a/app/scss/_nav.scss
+++ b/app/scss/_nav.scss
@@ -28,10 +28,10 @@ header {
   }
 }
   #search-bar-form {
-    display: inline-block;
     width: 330px;
-    height: 45px;
+    height: 40px;
     text-align: center;
+    float: left;
     h2 {
       font-size: 4rem;
       font-family: $sans, sans-serif;
@@ -39,7 +39,7 @@ header {
       margin: 0;
     }
     #search-input {
-      padding: 13px 3px 13px 25px;
+      padding: 12px 3px 12px 25px;
       box-sizing: border-box;
       font-size: 1rem;
       width: 100%;
@@ -49,14 +49,6 @@ header {
         border-bottom: none;
         outline: none;
       }
-    }
-    #search-icon-btn {
-      position: relative;
-      font-size: 1rem;
-      right: 152px;
-      bottom: 35px;
-      background: none;
-      border: none;
     }
   }
     #results-dropdown {
@@ -92,9 +84,8 @@ nav {
   background: $white;
   box-shadow: 0 2px 3px 0 rgba(0,0,0,0.1);
   #show-filter-options {
-    position: relative;
-    bottom: 35px;
-    margin-left: 10px;
+    margin: 8px 0 0 10px;
+    float: left;
     background: none;
     border: 1px solid $main;
     color: $main;
@@ -109,11 +100,21 @@ nav {
   .menu-icon {
     display: none;
   }
+  #search-icon {
+    position: relative;
+    font-size: 1.5rem;
+    right: 106px;
+    bottom: -9px;
+    background: none;
+    border: none;
+  }
   #logo {
     position: relative;
     text-align: center;
     bottom: 16px;
     img {
+      float: left;
+      margin: 10px 0 0 10px;
       height: 50px;
       opacity: 0.8;
     }
@@ -182,19 +183,13 @@ nav {
   }
 }
 
-@media (max-width: 300px) {
+@media (max-width: 400px) {
   #search-bar-form {
     width: 66%;
     margin-left: 8%;
     #search-input {
       width: 0;
       padding: 0;
-    }
-    #search-icon-btn {
-      font-size: 1.5rem;
-      left: 35%;
-      bottom: 1px;
-      color: $main;
     }
   }
   #mobile-menu {
@@ -233,8 +228,16 @@ nav {
     a {
       margin: 0;
     }
+    #search-icon {
+      font-size: 1.5rem;
+      left: 0%;
+      bottom: -4px;
+      color: $main;
+    }
     .menu-icon {
       display: inline-block;
+      float: right;
+      margin-right: 30px;
       font-size: 1.7rem;
       padding: 4px;
       background: $main;
@@ -245,9 +248,9 @@ nav {
       display: none;
     }
     #logo {
-      float: left;
-      bottom: 0;
-      margin-left: 2%;
+      position: absolute;
+      left: 0;
+      bottom: 8px;
       img {
         height: 35px;
       }
