--- a/app/scss/_recipe.scss
+++ b/app/scss/_recipe.scss
@@ -108,7 +108,7 @@
   }
 }
 
-@media (max-width: 300px) {
+@media (max-width: 400px) {
   .recipe-title {
     padding: 20px 0 10px 0;
     margin: 20px 0;
