--- a/app/scss/_results.scss
+++ b/app/scss/_results.scss
@@ -45,7 +45,7 @@
   }
 }
 
-@media (max-width: 300px) {
+@media (max-width: 400px) {
   #results-section {
     margin: 110px auto;
     width: 90%;
